--- a/frontend/src/stylesheets/debrief.css
+++ b/frontend/src/stylesheets/debrief.css
@@ -82,6 +82,7 @@
     display: flex;
     padding: 8px;
     background-color: #1f1f1f;
+    word-wrap: break-word;
 }
 
 .debrief-body > span > p {
@@ -92,15 +93,18 @@
     margin: 0px;
     padding: 0px;
     display: inline;
+}
 
+.debrief-body > p {
+    word-wrap: break-word;
 }
 
 .debrief-body > span > .firstItem {
     display: flex;
     align-items: start;
     padding: 6px;
-   
 }
+
 .debrief-title {
     color: rgba(156,204,254,1);
 }
